@@ -4,7 +4,8 @@ name := "biggraph"
 
 javaOptions in Test := Seq(
   "-Dsun.io.serialization.extendedDebugInfo=true",
-  "-Dbiggraph.default.partitions.per.core=1")
+  "-Dbiggraph.default.partitions.per.core=1",
+  "-XX:PermSize=256M")
 
 scalacOptions ++= Seq("-feature", "-deprecation", "-unchecked", "-Xfatal-warnings")
 
@@ -28,6 +29,10 @@ libraryDependencies ++= Seq(
   "com.fasterxml.jackson.core" % "jackson-core" % "2.4.4",
   "com.fasterxml.jackson.core" % "jackson-annotations" % "2.4.4",
   "com.fasterxml.jackson.core" % "jackson-databind" % "2.4.4",
+  // The below dep is needed to avoid jar version conflict when running in Amazon EMR.
+  // (There we use a Hadoop-less Spark build and use Hadoop libs provided by Amazon.
+  // This way we get s3 consistent view support.)
+  "org.apache.httpcomponents" % "httpclient" % "4.5.1",
   "org.apache.commons" % "commons-lang3" % "3.3",
   "org.apache.spark" %% "spark-core" % sparkVersion.value % "provided",
   "org.mindrot" % "jbcrypt" % "0.3m",  // For password hashing.
@@ -43,7 +48,7 @@ libraryDependencies ++= Seq(
   "org.kohsuke" % "groovy-sandbox" % "1.10",
   "com.lihaoyi" % "ammonite-sshd" % "0.5.2" cross CrossVersion.full,
   // CSV DataFrame API. Added just for use with the SSH shell, but may get used more widely later.
-  "com.databricks" % "spark-csv_2.10" % "1.2.0")
+  "com.databricks" % "spark-csv_2.10" % "1.3.0")
 
 // Runs "stage", then creates the "stage/version" file.
 def myStage = Command.command("stage") { state =>
